pissenlit-kube-conf/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pissenlit
spec:
  selector:
    matchLabels:
      app: pissenlit
  replicas: 3
  template:
    metadata:
      labels:
        app: pissenlit
    spec:
      containers:
        - name: pissenlit
          image: bashofmann/rancher-demo:1.0.0
          ports:
            - containerPort: 8080
