pissenlit-kube-conf/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pissenlit
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: pissenlit
